Popup/Drawer: Reposition based on Overlay geometry instead of Window geometry

Calculations relating to the top and left edges are based on Overlay
geometry, but calculations relating to the bottom and right edges are
currently based on Window geometry instead.

This patch makes all calculations based on Overlay geometry, for
consistency.

The single new auto-test covers both code paths modified by this patch,
QQuickDrawerPositioner::reposition() and
QQuickPopupPositioner::reposition()

Change-Id: I6cf9bcc39985e7c9c325ba6c47198fb20215be4b
Fixes: QTBUG-122963
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit 931e67f5433468ea43dd2dcb03cdbd58936da2fd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 7ef4989a59a2ce8ddf3627f75941a3e687ea23d7)